@@ -744,3 +744,9 @@ CMS             →  只能配 ParNew 或 Serial
 G1              →  自己管新老年代（不需要搭配）
 ```
 
+**🔴 GC日志**
+
+GC 日志配置
+```
+-Xlog:gc*,safepoint:file=/logs/gc.log:time,uptime,level,tags:filecount=10,filesize=100M
+```
